--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8080
 server.servlet.context-path=/ShopmeAdmin
 
 spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
-spring.datasource.username=root
-spring.datasource.password=DisneyJunior
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
